--- a/style.css
+++ b/style.css
@@ -147,47 +147,86 @@ body {
   }
 
   /* Styles pour les appareils mobiles */
+/* Styles pour les appareils mobiles */
 @media only screen and (max-width: 767px) {
 
-    /* Menu de navigation */
-    nav ul {
-      flex-direction: column;
-    }
-  
-    nav li {
-      margin: 0.5rem 0;
-    }
-  
-    /* Présentation */
-    .left {
-      float: none;
-      width: 100%;
-    }
-  
-    .right {
-      float: none;
-      width: 100%;
-      margin-top: 2rem;
-    }
-  
-    /* Projets */
-    .projet {
-      width: 100%;
-      margin: 2rem 0;
-    }
-  
-    /* Formulaire de contact */
-    form {
-      margin-top: 2rem;
-    }
-  
-    input[type="text"], input[type="email"], textarea {
-      width: 100%;
-      margin-bottom: 1rem;
-    }
-  
-    input[type="submit"] {
-      margin-top: 1rem;
-    }
-  
-  }  
+  /* Menu de navigation */
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav li {
+    margin: 0.5rem 0;
+  }
+
+  /* Présentation */
+  .left {
+    float: none;
+    width: 100%;
+  }
+
+  .right {
+    float: none;
+    width: 100%;
+    margin-top: 2rem;
+  }
+
+  /* Projets */
+  #projets {
+    width: 100%;
+    z-index: 0;
+    margin-top: 15%;
+  }
+
+  .projet {
+    width: 100%;
+    margin: 2rem 0;
+  }
+
+  .projet img {
+    width: 100%;
+    height: auto;
+  }
+
+  .description {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .description img {
+    height: 60%;
+    width: auto;
+  }
+
+  .projet:hover .description {
+    opacity: 1;
+  }
+
+  /* Formulaire de contact */
+  form {
+    margin-top: 2rem;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  input[type="submit"] {
+    margin-top: 1rem;
+  }
+
+}
