--- a/style.css
+++ b/style.css
@@ -149,9 +149,13 @@ body {
 
 @media only screen and (max-width: 767px) {
 
-nav {
-height: 30%;
-}
+  nav {
+  height: 30%;
+  }
+
+  nav h1 {
+    font-size: 250%;
+  }
 
   nav ul {
     flex-direction: column;
@@ -189,7 +193,6 @@ height: 30%;
   .projet {
     width: 100%;
     margin:0;
-    transition: all 0s ease-in-out;
   }
 
   .projet img {
@@ -210,15 +213,19 @@ height: 30%;
     justify-content: center;
     align-items: center;
     opacity: 0;
-    width : auto;
-    height: auto;
+    width : 100%;
+    height: 100%;
 
     transition: all 0.5s ease-in-out;
   }
 
   .description img {
-    height: 60%;
+    height: 0%;
     width: auto;
+  }
+ 
+  .description p {
+    width : 100%;
   }
 
   .projet:hover .description {
