--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
   }
   
 #presentation {
-  margin-top: 10%;
+  justify-content: center;
 }
 
 #presentation h1 {
@@ -83,13 +83,15 @@ body {
   }
 
   #projets {
-    width : 50%;
+    width : 100%;
     z-index: 0;
     margin-top: 15%;
+    margin-left : 25%;
   }
   #projets h3 {
     margin-left: 3rem;
     position: relative;
+
   }
   
   .projet {
@@ -98,6 +100,8 @@ body {
     cursor: pointer;
     transition: all 0.5s ease-in-out;
     margin-bottom: 3rem;
+    margin-left: -15%;
+    width : 50%
   }
 
   #projets h1{
@@ -110,7 +114,7 @@ body {
     height: auto;
   }
   .projet p {
-    width : 50%
+    width : 70%
   }
   .projet a {
     color : rgb(63, 133, 194);
@@ -129,7 +133,7 @@ body {
     justify-content: center;
     align-items: center;
     opacity: 0;
-    transition: all 0.0s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
 
   .description img {
